tests/fixtures/invalid/unclosed_quote.yaml.tftpl
# This file tests handling of unclosed string quotes
main:
  steps:
    - init:
        assign:
          - message: "Hello world
          - other: value
